--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,23 @@
    <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
+   </properties>
+   <build>
+   <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-jar-plugin</artifactId>
+      <version>3.1.0</version>
+      <configuration>
+        <archive>
+          <manifest>
+            <addClasspath>true</addClasspath>
+            <classpathPrefix>lib/</classpathPrefix>
+            <mainClass>com.codecool.expertsystem.Main</mainClass>
+          </manifest>
+        </archive>
+      </configuration>
+    </plugin>
+   </plugins>
+   </build>
 </project>
